@@ -1,6 +1,11 @@
 2008-10-30  Mike Krüger  <mkrueger@novell.com>
 
 	* Gui/NRefactoryResolver.cs:
+	* Gui/NewCSharpExpressionFinder.cs: Worked on "new" completion.
+
+2008-10-30  Mike Krüger  <mkrueger@novell.com>
+
+	* Gui/NRefactoryResolver.cs:
 	* Gui/NRefactoryParameterDataProvider.cs: fixed 'Bug 432438 - Incorrect
 	autocomplete for delegates'.
 
